--- a/.env
+++ b/.env
@@ -1,12 +1,14 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=P2PnArHIfoWIno3F2c8WvTQrK5XPPcTp
-APP_URL=http://localhost
+APP_URL=http://tasklist.dev
 
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_PORT=3306
+DB_DATABASE=tasklist
+DB_USERNAME=root
+DB_PASSWORD=NEWPASSWORD
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
