--- a/.env.jenkins
+++ b/.env.jenkins
@@ -1,7 +1,7 @@
 APP_ENV=testing
 APP_KEY=SomeRandomString
 
-DB_CONNECTION=testing
+DB_CONNECTION=jenkins
 DB_TEST_USERNAME=jenkins
 DB_TEST_PASSWORD=
 
