--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,61 +28,65 @@ services:
                 - TZ=UTC
         volumes_from:
             - applications
+        extra_hosts:
+            - "dockerhost:138.68.90.224"
         ports:
            - "2222:22"
         tty: true
 
     php-fpm:
-            build:
-                context: ./docker/php-fpm
-                args:
-                    - INSTALL_XDEBUG=false
-                    - INSTALL_SOAP=false
-                    - INSTALL_MONGO=false
-                    - INSTALL_ZIP_ARCHIVE=false
-                    - INSTALL_BCMATH=false
-                    - INSTALL_MEMCACHED=false
-                    - INSTALL_OPCACHE=false
-                    - INSTALL_AEROSPIKE_EXTENSION=false
-                    - CODEIGNITER=false
-                dockerfile: Dockerfile-70
-            volumes_from:
-                - applications
-            expose:
-                - "9000"
-            links:
-                - workspace
-            environment:
-                # IMPORTANT: Set the Remote Interpreter entry matching name to `laravel`
-                - PHP_IDE_CONFIG=serverName=laravel
+        build:
+            context: ./docker/php-fpm
+            args:
+                - INSTALL_XDEBUG=false
+                - INSTALL_SOAP=false
+                - INSTALL_MONGO=false
+                - INSTALL_ZIP_ARCHIVE=false
+                - INSTALL_BCMATH=false
+                - INSTALL_MEMCACHED=false
+                - INSTALL_OPCACHE=false
+                - INSTALL_AEROSPIKE_EXTENSION=false
+                - CODEIGNITER=false
+            dockerfile: Dockerfile-70
+        volumes_from:
+            - applications
+        expose:
+            - "9000"
+        links:
+            - workspace
+        extra_hosts:
+            - "dockerhost:138.68.90.224"
+        environment:
+            # IMPORTANT: Set the Remote Interpreter entry matching name to `laravel`
+            - PHP_IDE_CONFIG=serverName=laravel
 
     apache2:
-            build:
-                context: ./docker/apache2
-                args:
-                    - PHP_SOCKET=php-fpm:9000
-            volumes_from:
-                - applications
-            volumes:
-                - ./logs/apache2:/var/log/apache2
-            ports:
-                - "80:80"
-                - "443:443"
-            links:
-                - php-fpm
+        build:
+            context: ./docker/apache2
+            args:
+                - PHP_SOCKET=php-fpm:9000
+        volumes_from:
+            - applications
+        volumes:
+            - ./logs/apache2:/var/log/apache2
+        ports:
+            - "80:80"
+            - "443:443"
+        links:
+            - php-fpm
 
     mysql:
-            build:
-                context: ./docker/mysql
-                args:
-                    - MYSQL_DATABASE=testing
-                    - MYSQL_USER=root
-                    - MYSQL_PASSWORD=
-                    - MYSQL_ROOT_PASSWORD=root
-            volumes:
-                - mysql:/var/lib/mysql
-            ports:
-                - "3306:3306"
+        build:
+            context: ./docker/mysql
+            args:
+                - MYSQL_DATABASE=testing
+                - MYSQL_USER=root
+                - MYSQL_PASSWORD=
+                - MYSQL_ROOT_PASSWORD=root
+        volumes:
+            - mysql:/var/lib/mysql
+        ports:
+            - "3306:3306"
 
 volumes:
     mysql:
