--- a/.env.jenkins
+++ b/.env.jenkins
@@ -4,6 +4,7 @@ APP_KEY=SomeRandomString
 DB_CONNECTION=jenkins
 DB_TEST_USERNAME=jenkins
 DB_TEST_PASSWORD=
+DB_TEST_PORT=33060
 
 CACHE_DRIVER=array
 SESSION_DRIVER=array
