--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,7 @@ services:
                 - MYSQL_USER=root
                 - MYSQL_PASSWORD=
                 - MYSQL_ROOT_PASSWORD=root
+                - MYSQL_HOST=localhost
         volumes:
             - mysql:/var/lib/mysql
         ports:
