--- a/docker/mysql/Dockerfile
+++ b/docker/mysql/Dockerfile
@@ -8,11 +8,13 @@ ARG MYSQL_DATABASE=test
 ARG MYSQL_USER=test
 ARG MYSQL_PASSWORD=secret
 ARG MYSQL_ROOT_PASSWORD=root
+ARG MYSQL_HOST=localhost
 
 ENV MYSQL_DATABASE=$MYSQL_DATABASE
 ENV MYSQL_USER=$MYSQL_USER
 ENV MYSQL_PASSWORD=$MYSQL_PASSWORD
 ENV MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD
+ENV MYSQL_HOST=$MYSQL_HOST
 
 RUN sed -i 's/MYSQL_DATABASE/'$MYSQL_DATABASE'/g' /etc/mysql/startup && \
     sed -i 's/MYSQL_USER/'$MYSQL_USER'/g' /etc/mysql/startup && \
