--- a/.env.jenkins
+++ b/.env.jenkins
@@ -2,7 +2,7 @@ APP_ENV=testing
 APP_KEY=SomeRandomString
 
 DB_CONNECTION=jenkins
-DB_TEST_USERNAME=jenkins
+DB_TEST_USERNAME=root
 DB_TEST_PASSWORD=
 DB_TEST_PORT=33060
 
