--- a/.env.jenkins
+++ b/.env.jenkins
@@ -2,7 +2,7 @@ APP_ENV=testing
 APP_KEY=SomeRandomString
 
 DB_CONNECTION=jenkins
-BE_TEST_HOST=127.0.0.1
+BE_TEST_HOST=mysql
 DB_TEST_PORT=33060
 
 CACHE_DRIVER=array
