--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,8 +69,8 @@ services:
                 - MYSQL_ROOT_PASSWORD=root
         volumes:
             - mysql:/var/lib/mysql
-        ports:
-            - "33060:3306"
+        expose:
+            - "3306"
 
 volumes:
     mysql:
