--- a/.env.jenkins
+++ b/.env.jenkins
@@ -2,7 +2,7 @@ APP_ENV=testing
 APP_KEY=SomeRandomString
 
 DB_CONNECTION=jenkins
-DB_TEST_HOST=localhost
+DB_TEST_HOST=127.0.0.1
 DB_TEST_PORT=3306
 
 CACHE_DRIVER=array
